// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`manager/terraform/update updateDependency replaces existing value 1`] = `
"module \\"foo\\" {
  source  = \\"github.com/hashicorp/example?ref=v1.0.1\\"
}

module \\"bar\\" {
  source  = \\"github.com/hashicorp/example?ref=next\\"
}

module \\"consul\\" {
  source = \\"hashicorp/consul/aws\\"
  version = \\"0.1.0\\"
}

module \\"container_definition\\" {
  source         = \\"github.com/tieto-cem/terraform-aws-ecs-task-definition//modules/container-definition?ref=v0.1.0\\"
  name           = \\"hello\\"
  image          = \\"tutum/hello-world\\"
  mem_soft_limit = 256
  port_mappings  = [{
    containerPort = 80
    hostPort      = 80
  }]
}

module \\"task_definition\\" {
  source                = \\"github.com/tieto-cem/terraform-aws-ecs-task-definition?ref=v0.1.0\\"
  name                  = \\"mytask\\"
  container_definitions = [
    \\"\${module.container_definition.json}\\"]
}
module \\"consul\\" {
  source = \\"git@github.com:hashicorp/example.git?ref=v2.0.0\\"
}
"
`;

exports[`manager/terraform/update updateDependency replaces major updates > 1 1`] = `
"module \\"foo\\" {
  source  = \\"github.com/hashicorp/example?ref=v1.0.0\\"
}

module \\"bar\\" {
  source  = \\"github.com/hashicorp/example?ref=next\\"
}

module \\"consul\\" {
  source = \\"hashicorp/consul/aws\\"
  version = \\"0.1.0\\"
}

module \\"container_definition\\" {
  source         = \\"github.com/tieto-cem/terraform-aws-ecs-task-definition//modules/container-definition?ref=v0.1.3\\"
  name           = \\"hello\\"
  image          = \\"tutum/hello-world\\"
  mem_soft_limit = 256
  port_mappings  = [{
    containerPort = 80
    hostPort      = 80
  }]
}

module \\"task_definition\\" {
  source                = \\"github.com/tieto-cem/terraform-aws-ecs-task-definition?ref=v0.1.0\\"
  name                  = \\"mytask\\"
  container_definitions = [
    \\"\${module.container_definition.json}\\"]
}
module \\"consul\\" {
  source = \\"git@github.com:hashicorp/example.git?ref=v2.0.0\\"
}
"
`;
